# server-gateway

./: .gitignore  .gitmodules  README.md
api/: package-lock.json  package.json
api/data/: banned.txt
api/src/: index.ts
api/src/routes/: check-ip.ts
api/src/utils/: Utils.ts
database/: transactions.json
database/merchants/: Gemtopia.json  Oxygen Hosting.json  admin.json  example.json
database/pending/merchants/: example.json
database/servers/: Gemtopia.json  example.json  test1.json
loginurl/: .env  .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  server.js
loginurl/cert/: loginurl.growplus.asia-chain.pem  loginurl.growplus.asia-crt.pem  loginurl.growplus.asia-key.pem
loginurl/src/: middleware.ts
loginurl/src/app/: globals.css  layout.tsx  (+3 more)
logon-server/: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build.sh
logon-server/src/: BaseApp.h  GlobalVar.h  main.cpp
logon-server/src/SDK/: HSL.h  MD5.h  TimeWrapper.h
logon-server/src/SDK/Builders/: DialogBuilder.h  WorldOffersBuilder.h
logon-server/src/SDK/Proton/: Math.h  MiscUtils.cpp  MiscUtils.h  RTTEX.h  TextScanner.cpp  TextScanner.h  Variant.cpp  Variant.h
logon-server/src/SDK/Proton/FileSystem/: FileManager.cpp  FileManager.h  FileSystem.h  StreamingInstance.cpp  StreamingInstance.h  StreamingInstanceFile.cpp  StreamingInstanceFile.h
logon-server/src/packet/: PacketVariant.cpp  PacketVariant.h
logon-server/src/player/: Player.h  RoleDef.h  RoleManager.cpp  RoleManager.h
logon-server/src/server/: DataManager.h  DataManager_static.cpp  ENetServer.cpp  ENetServer.h  ENetServer_static.cpp
logon-server/src/server/handler/: FunctionDef.h  NetMessageGameMessage.h  NetMessageGameMessage_static.cpp  NetMessageGenericText.h  NetMessageGenericText_static.cpp
logon-server/src/utils/: CacheManager.cpp  CacheManager.h  ColorConverter.h  ConsoleInterface.cpp  ConsoleInterface.h  Curl.cpp  Curl.h  DialogBuilder.cpp  DialogBuilder.h  FileSystem2.cpp  FileSystem2.h  KeyGenerator.cpp  KeyGenerator.h  SystemUtils.cpp  SystemUtils.h  Utils.cpp  Utils.h  VariantList.h  VariantList_static.cpp
(+16 files in other folders)
